--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     background-color: #F7F7F7;
-    font-family: 'Montserrat';
+    font-family: sans-serif;
 }
 
 nav {
@@ -68,8 +68,22 @@ main section {
     box-shadow: .2rem .2rem .2rem .2rem lightgray;
     align-items: center;
     height: 13rem;
-    margin-bottom: 6rem;
+    margin-bottom: 2rem;
     max-width: 150ch;
+    color: black;
+}
+
+.question.info {
+    display: flex;
+    background: linear-gradient(#272932, #474A58);
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: .2rem .2rem .2rem .2rem lightgray;
+    align-items: center;
+    height: 13rem;
+    margin-bottom: 2rem;
+    max-width: 150ch;
+    color: #F7F7F7;
 }
 
 .question h2 {
@@ -90,7 +104,7 @@ main section {
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 2rem;
-
+    font-size: 1.5rem;
 }
 
 .buttons button:hover {
@@ -108,7 +122,7 @@ main section {
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 2rem;
-
+    font-size: 1.5rem;
 }
 
 .buttons {
@@ -135,4 +149,81 @@ footer {
     border-top-left-radius: 20px;
     position: absolute;
     width: 100%;
+}
+
+.start {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.781);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
+
+.end {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.781);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
+
+.endTxt {
+    font-weight: bold;
+    font-size: 1.5rem;
+    background: linear-gradient(#272932, #474A58);
+    padding: 1rem;
+    border-radius: 10px;
+    color: #F7F7F7;
+}
+
+.start-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: .5rem;
+    width: 15rem;
+    height: 4rem;
+    font-size: 2rem;
+}
+
+.start-button:hover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: .5rem;
+    width: 15rem;
+    height: 4rem;
+    font-size: 2rem;
+    background-color: #d9dadf;
+}
+
+.progressbar {
+    height: 2em;
+    background-repeat: no-repeat;
+    background-size: 0;
+    margin: 0 auto;
+    max-width: 150ch;
+    margin-bottom: 3rem;
+    border-radius: 20px;
+}
+
+.progressbar {
+    border: 1px solid #272932;
+    background-image: linear-gradient(to left, #474A58, #272932 100%);
+}
+
+.progressbar.animation {
+    background-size: 100%;
+    transition: background-size 10s linear;
+}
+
+.progressbar.info {
+    background-size: 100%;
+    transition: background-size 7s linear;
 }
