--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ main section {
     font-size: 1.5rem;
 }
 
-.buttons button:hover {
+.buttons button:hover:enabled {
     background: linear-gradient(#202129, #33353f);
     color: #d1cece;
     border-radius: .5rem;
@@ -130,10 +130,30 @@ main section {
     justify-content: center;
 }
 
+.next {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.nextButton {
+    padding: 1rem;
+    border-radius: .5rem;
+    font-size: 1.3rem;
+    background-color: #F7F7F7;
+}
+
+.nextButton:hover:enabled {
+    padding: 1rem;
+    border-radius: .5rem;
+    font-size: 1.3rem;
+    background-color: #d9dadf;
+}
+
 .valid {
     display: flex;
     justify-content: center;
-    margin-top: 5rem;
+    margin-top: 3rem;
     font-size: 2rem;
 }
 
@@ -141,12 +161,10 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(#272932, #474A58);
+    background: linear-gradient(#474A58, #272932);
     padding: .8rem 0 .8rem 0;
     color: #F7F7F7;
     bottom: 0;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
     position: absolute;
     width: 100%;
 }
