--- a/style.css
+++ b/style.css
@@ -180,25 +180,7 @@ footer {
     z-index: 100;
 }
 
-.end {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.781);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-}
 
-.endTxt {
-    font-weight: bold;
-    font-size: 1.5rem;
-    background: linear-gradient(#272932, #474A58);
-    padding: 1rem;
-    border-radius: 10px;
-    color: #F7F7F7;
-}
 
 .start-button {
     display: flex;
@@ -244,4 +226,33 @@ footer {
 .progressbar.info {
     background-size: 100%;
     transition: background-size 7s linear;
+}
+
+.end {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.781);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
+
+.endTxt{
+    text-align: center;
+}
+
+
+table {
+    border-collapse: collapse;
+    background-color: rgba(255, 255, 255);
+    border: 2px solid black;
+}
+
+th,td {
+    border: 1px solid #aaa;
+    padding: 5px;
+    text-align: left;
+    font-size: 3rem;
 }
