add_last_CSS_features

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     margin: 0;
-    padding: 0;
 }
 
 body {
@@ -18,12 +17,12 @@ header {
 
 #title {
     font-size: 1.5em;
-    padding-top: 0.2em;
+    padding-top: 0.5em;
 }
 
-#quiz {
+#quiz-name {
     font-size: 1em;
-    padding-bottom: 0.8em;
+    padding-bottom: 0.5em;
 }
 
 img {
@@ -40,18 +39,17 @@ main {
 }
 
 #num-question {
-    padding-bottom: 0.5em;
     color: #272932;
     font-size: 1.2em;
+    margin-bottom: 0.5em;
 }
-
 .question {
     background: linear-gradient(#E6E6E6, #F7F7F7);
     padding: 1rem;
     border-radius: 20px;
     box-shadow: 0px 5px 5px darkgrey;
     align-items: center;
-    height: auto;
+    text-align: center;
     margin-bottom: 1rem;
     color: #272932;
     font-size: .8rem;
@@ -61,10 +59,6 @@ main {
     background: linear-gradient(#272932, #474A58);
     color: #F7F7F7;
     font-size: .7rem;
-}
-
-.question h2 {
-    padding-left: 7rem;
 }
 
 .buttons button {
@@ -80,7 +74,7 @@ main {
     background: linear-gradient(#202129, #33353f);
     color: #d1cece;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 1em;
     box-shadow: 0px 5px 5px darkgrey;
 }
@@ -88,7 +82,7 @@ main {
 .buttons {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1.5em;
+    gap: 0.5em;
 }
 
 .next {
@@ -98,8 +92,8 @@ main {
 }
 
 #nextButton {
-    padding: .8rem;
-    border-radius: .5rem;
+    padding: .5rem;
+    border-radius: 1rem;
     font-size: .8rem;
     background-color: #F7F7F7;
 }
@@ -111,7 +105,7 @@ main {
 .valid {
     color: #272932;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 0.5em;
     font-weight: bold;
     font-size: 1.2em;
 }
@@ -119,11 +113,30 @@ main {
 footer {
     background: linear-gradient(#474A58, #272932);
     color: #F7F7F7;
-    text-align: center;
-    padding: 0.5em;
     width: 100%;
+    text-align: center;
     position: fixed;
     bottom: 0;
+    padding: 0.5em;
+}
+
+#mute {
+    text-align: right;
+    margin-top: -1.2em;
+    margin-right: 1em;
+}
+
+#mute_button {
+    border-radius: 2em;
+    background-color: #F7F7F7
+}
+
+#mute_button:hover {
+    background-color: #d9dadf;
+}
+
+#wcs {
+    margin-top: 0.2em;
 }
 
 .start {
@@ -136,7 +149,6 @@ footer {
     justify-content: center;
     z-index: 100;
 }
-
 
 
 #start-button {
@@ -161,7 +173,7 @@ footer {
 }
 
 .progressbar {
-    height: 1.5em;
+    height: 1em;
     background-repeat: no-repeat;
     background-size: 0;
     margin: 0 auto;
@@ -170,7 +182,7 @@ footer {
 }
 
 .progressbar {
-    border: 1px solid #272932;
+    border: 0.2px solid #aaa;
     background-image: linear-gradient(to left, #474A58, #272932 100%);
 }
 
@@ -208,7 +220,7 @@ th,td {
     font-size: 1rem;
 }
 
-.form-example{
+.form-example {
     background-color: #F7F7F7;
     padding: 2rem;
     border-radius: 20px;
@@ -223,11 +235,11 @@ th,td {
     font-size: 1rem;
 }
 
-#questName{
+#questName {
     font-size: 1.5rem;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 782px) {
     header {
         line-height: 0;
     }
@@ -235,26 +247,29 @@ th,td {
     #title {
         text-align: left;
         font-size: 1.8em;
-        padding-top: 1.5em;
+        padding-top: 1.2em;
         padding-left: 0.5em;
     }
 
     #quiz-name {
         text-align: center;
         padding-top: 0.2em;
-        padding-bottom: 1.2em;
+        padding-bottom: 2em;
     }
-    
+    main {
+        margin-left: 16%;
+        margin-right: 16%;
+        padding-top: 2em;
+    }
     img {
-        width: 100%;
+        width: 300px;
+        height: 200px;
         max-width: 23rem;
         border-radius: 20px;
     }
     
     #num-question {
         font-size: 1.5rem;
-        margin-top: 4rem;
-        margin-bottom: 2rem;
         text-shadow: lightgray 2px 2px;
     }
     
@@ -266,7 +281,7 @@ th,td {
         box-shadow: .2rem .2rem .2rem .2rem lightgray;
         align-items: center;
         min-height: 13rem;
-        margin-bottom: 2rem;
+        margin-bottom: 1.8rem;
         font-size: .7rem;
         font-size: 1rem;
         width: auto;
@@ -281,7 +296,7 @@ th,td {
         align-items: center;
         min-height: 13rem;
         height: auto;
-        margin-bottom: 2rem;
+        margin-bottom: 1.8rem;
         font-size: 1rem;
         color: #F7F7F7;
     }
@@ -293,7 +308,7 @@ th,td {
     .buttons button {
         background: linear-gradient(#272932, #474A58);
         color: #F7F7F7;
-        border-radius: .5rem;
+        border-radius: 1rem;
         box-shadow: .2rem .2rem .2rem .2rem lightgray;
     
         display: inline-flex;
@@ -306,7 +321,7 @@ th,td {
     .buttons button:hover:enabled {
         background: linear-gradient(#202129, #33353f);
         color: #d1cece;
-        border-radius: .5rem;
+        border-radius: 1.5rem;
         box-shadow: .2rem .2rem .2rem .2rem lightgray;
     
         display: inline-flex;
@@ -317,27 +332,29 @@ th,td {
     }
     
     .buttons {
+        margin-left: 5%;
+        margin-right: 5%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 1.5em;
+        padding: 1em;
     }
     
     .next {
         display: flex;
         justify-content: center;
-        margin-top: 4rem;
+        margin-top: 1rem;
     }
     
     #nextButton {
         padding: 1rem;
-        border-radius: .5rem;
+        border-radius: 2rem;
         font-size: 1.3rem;
         background-color: #F7F7F7;
     }
     
     #nextButton:hover:enabled {
         padding: 1rem;
-        border-radius: .5rem;
         font-size: 1.3rem;
         background-color: #d9dadf;
     }
@@ -345,29 +362,16 @@ th,td {
     .valid {
         display: flex;
         justify-content: center;
-        margin-top: 3rem;
-        font-size: 2rem;
+        margin-top: 1.5rem;
+        font-size: 1.5rem;
+        z-index: 5;
     }
-    
-    footer {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: linear-gradient(#474A58, #272932);
-        padding: .8rem 0 .8rem 0;
-        color: #F7F7F7;
-        bottom: 0;
-        position: absolute;
-        width: 100%;
-    }
-    
     
     .progressbar {
         height: 2em;
         background-repeat: no-repeat;
         background-size: 0;
-        margin: 0 auto;
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
         border-radius: 20px;
     }
     
@@ -378,4 +382,3 @@ th,td {
         font-size: 2rem;
     }
 }
-
