--- a/style.css
+++ b/style.css
@@ -138,10 +138,6 @@ footer {
     background-color: #d9dadf;
 }
 
-#wcs {
-    margin-top: 0.2em;
-}
-
 .start {
     position: fixed;
     width: 100%;
@@ -162,6 +158,7 @@ footer {
     width: 15rem;
     height: 4rem;
     font-size: 2rem;
+    background-color: rgba(255, 255, 255);
     color: #272932;
 }
 
